# final_project

./: CMakeLists.txt  bmp280_i2c.c  milkv_duo.cmake  publisher.c  raspberry_pi.cmake  subscriber.c
BMP280/: CMakeLists.txt  bmp280_i2c.h  main.c
install_cortexa53_cjson/lib/: libcjson.so.1.7.17  libcjson_utils.so.1.7.17
install_cortexa53_cjson/lib/cmake/cJSON/: cjson-noconfig.cmake  cjson_utils.cmake
install_cortexa53_mqtt/lib/: libmosquitto.so.1  libmosquittopp.so.2.0.18
install_cortexa53_mqtt/sbin/: mosquitto
install_cortexa53_openssl/lib/: libssl.so.1.1
install_cv1800b_cjson/lib/: libcjson.so.1
install_cv1800b_cjson/lib/cmake/cJSON/: cjson.cmake  cjson_utils-noconfig.cmake
install_cv1800b_mqtt/lib/: libmosquitto.so.1  libmosquittopp.so.1
install_cv1800b_mqtt/sbin/: mosquitto
install_cv1800b_openssl/lib/: libcrypto.so.1.1  libssl.so.1.1
